--- a/extension-manifest-v3/src/_locales/zh_CN/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_CN/messages.json
@@ -199,12 +199,6 @@
   "let_ghostery_be_your_complete_privacy_advocate_and_reject_all_popups_and_tracking_for_you__or_do_it_yourself_": {
     "message": "让 Ghostery 成为您的全面隐私权倡导者，并为您拒绝所有弹出窗口和跟踪，或者由您自己做主！"
   },
-  "manage_website_settings": {
-    "message": "Manage website settings"
-  },
-  "manage_your_privacy_protection": {
-    "message": "Manage your privacy protection"
-  },
 	"manifest_name": {
     "message": "Ghostery – 隐私广告拦截工具"
   },
@@ -241,9 +235,6 @@
   },
   "no_trackers_detected": {
     "message": "No trackers detected"
-  },
-  "no_websites_added": {
-    "message": "No websites added"
   },
   "off": {
     "message": "关闭"
@@ -291,7 +282,7 @@
     "message": "Search website..."
   },
   "settings": {
-    "message": "settings"
+    "message": "设置"
   },
   "sign_in": {
     "message": "登录"
@@ -379,7 +370,7 @@
     "message": "WhoTracks.Me Statistical Report"
   },
   "whotracks_me_wheel": {
-    "message": "WhoTracks.Me wheel"
+    "message": "WhoTracks.Me Wheel"
   },
   "with_ghostery_enabled_you_instantly_browse_the_web_safer__faster_and_with_less_annoying_ads_": {
     "message": "启用 Ghostery 后，您可以立即更安全、更快速地浏览网页，并减少恼人的广告。"
