--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -46,8 +46,8 @@
   "apply_optimal_privacy_settings_": {
     "message": "Apply optimal privacy settings:"
   },
-  "are_you_sure__you_want_to_disable_tracker_previews_": {
-    "message": "Are you sure, you want to disable tracker previews?"
+  "are_you_sure_you_want_to_disable_trackers_preview_": {
+    "message": "Are you sure you want to disable Trackers Preview?"
   },
   "are_you_sure_you_want_to_skip_enabling_ghostery_": {
     "message": "Are you sure you want to skip enabling Ghostery?"
@@ -90,7 +90,7 @@
     "description": "Tracker category name - includes trackers used for cookie consent management, allowing websites different levels of tracking user activity"
   },
   "contact": {
-    "message": "Contact"
+    "message": "contact"
   },
   "contact_support": {
     "message": "Contact support"
@@ -175,7 +175,7 @@
     "message": "Ghostery settings"
   },
   "ghostery_will_be_paused_on_this_site__you_can_change_this_at_any_time_in_ghostery_settings_to_stop_trackers_and_ads_from_tracking_you_around_the_web": {
-    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery Settings to stop trackers and ads from tracking you around the web"
+    "message": "Ghostery will be paused on this site. You can change this at any time in Ghostery settings to stop trackers and ads from tracking you around the web"
   },
   "ghostery_will_be_paused_on_this_site_for_1_day": {
     "message": "Ghostery will be paused on this site for 1 day"
@@ -264,13 +264,13 @@
     "message": "privacy policy"
   },
   "privacy_policy___panel_company": {
-    "message": "Privacy policy"
+    "message": "privacy policy"
   },
   "privacy_protection": {
     "message": "Privacy protection"
   },
   "read_more_on_whotracks_me": {
-    "message": "Read more on WhoTracks.me"
+    "message": "Read more on WhoTracks.Me"
   },
   "report_a_broken_page": {
     "message": "Report a broken page"
@@ -317,9 +317,6 @@
   "trackers": {
     "message": "Trackers"
   },
-  "trackers__@_0_": {
-    "message": "trackers: $${0}"
-  },
   "trackers_count": {
     "message": "Trackers Count"
   },
@@ -346,7 +343,7 @@
     "description": "Tracker category name"
   },
   "website": {
-    "message": "Website"
+    "message": "website"
   },
   "website__@_0__": {
     "message": "Website ($${0})"
@@ -359,9 +356,6 @@
   },
   "what_is_whotracks_me_": {
     "message": "What is WhoTracks.Me?"
-  },
-  "whotracks_me": {
-    "message": "WhoTracks.Me"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, operated by Ghostery, is an integral part of Ghostery’s AI anti-tracking technology. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
@@ -390,7 +384,7 @@
   "you_re_all_set__ghosterian_": {
     "message": "You're all set, Ghosterian!"
   },
-  "you_won_t_see_anymore_tracker_wheels_next_to_the_search_results_": {
-    "message": "You won’t see anymore tracker wheels next to the search results."
+  "you_will_no_longer_see_tracker_wheels_next_to_the_search_results_": {
+    "message": "You will no longer see tracker wheels next to the search results."
   }
 }
