Fix contributor uppercase

--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -60,7 +60,7 @@
     "message": "Back"
   },
   "become_a_contributor": {
-    "message": "Become a contributor"
+    "message": "Become a Contributor"
   },
   "blocked": {
     "message": "Blocked"
