--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -98,6 +98,9 @@
   "continue": {
     "message": "Continue"
   },
+  "copied_to_clipboard": {
+    "message": "Copied to clipboard"
+  },
   "customer_interaction": {
     "message": "Customer Interaction",
     "description": "Tracker category name"
