--- a/extension-manifest-v3/src/_locales/hu/messages.json
+++ b/extension-manifest-v3/src/_locales/hu/messages.json
@@ -60,7 +60,7 @@
     "message": "Vissza"
   },
   "become_a_contributor": {
-    "message": "Become a contributor"
+    "message": "Legyen ön is Adakozó"
   },
   "blocked": {
     "message": "Blokkolva"
@@ -97,6 +97,9 @@
   },
   "continue": {
     "message": "Folytatás"
+  },
+  "copied_to_clipboard": {
+    "message": "Copied to clipboard"
   },
   "customer_interaction": {
     "message": "Ügyfélkommunikáció",
@@ -264,7 +267,7 @@
     "message": "Adatvédelmi Szabályzat"
   },
   "privacy_policy___panel_company": {
-    "message": "Privacy policy"
+    "message": "Adatvédelmi Szabályzat"
   },
   "privacy_protection": {
     "message": "Privacy protection"
